extend logging / add alert

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 ACTIVE_POOL=blue
 RELEASE_ID_BLUE=blue-release-id
 RELEASE_ID_GREEN=green-release-id
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/XXXX/YYYY/ZZZZ
+ALERT_ERROR_WINDOW=200
+ALERT_ERROR_THRESHOLD=0.02
+ALERT_COOLDOWN_SECONDS=300
+MAINTENANCE_FLAG_FILE=/var/run/maintenance.on
