--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -1,3 +1,18 @@
+log_format app_json escape=json
+    '{'
+    '"time":"$time_iso8601",'
+    '"remote_addr":"$remote_addr",'
+    '"request":"$request",'
+    '"status":$status,'
+    '"body_bytes_sent":$body_bytes_sent,'
+    '"request_time":$request_time,'
+    '"upstream_response_time":"$upstream_response_time",'
+    '"upstream_status":"$upstream_status",'
+    '"upstream_addr":"$upstream_addr",'
+    '"pool":"$upstream_http_x_app_pool",'
+    '"release":"$upstream_http_x_release_id"'
+    '}';
+
 upstream app_backend {
     zone app_backend_zone 64k;
     keepalive 16;
@@ -9,7 +24,7 @@ server {
     listen 8080;
     server_name _;
 
-    access_log /var/log/nginx/access.log;
+    access_log /var/log/nginx/app_access.log app_json;
     error_log /var/log/nginx/error.log warn;
 
     location / {
